Refactor TrackerConfigUtils